Genericize binary file copying/execution/etc